--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Chapter 10. Data Science Application</title>
+	<title>Chapter Chapter 9. Data visualization to the end user</title>
 	<!--  CSS -->
 	<!--BOOTSTRAP -->
 	<!-- Latest compiled and minified CSS -->
@@ -27,7 +27,7 @@
 				|  light-sensitive chart |                          | (row 4)
 				        (column 1)               (column 2)
 		-->
-		<h1>Chapter 10:  Data Science Application</h1>
+		<h1>Chapter 9. Data visualization to the end user</h1>
 		<div class="row">
 			<div class='col-lg-12'>
 				<div id="inputtable" class="well well-sm"></div>
